assets/css/misc/kg.css
.kg-toggle-card .kg-toggle-heading-text {
    font-size: 1.8rem;
    font-weight: 700;
}

.has-serif-title .kg-toggle-heading-text {
    font-family: var(--font-serif);
}

.kg-toggle-content > * + * {
    margin: 2.4rem 0 0;
}

.kg-callout-card-accent a {
    text-decoration: underline;
}

blockquote.kg-blockquote-alt {
    padding: 0 1.5em;
    font-style: normal;
    font-weight: 700;
    color: var(--secondary-text-color);
}

.kg-gallery-image {
    cursor: pointer;
}

.kg-image {
    margin-right: auto;
    margin-left: auto;
}

.kg-canvas {
    display: grid;
    grid-template-columns:
        [full-start]
        minmax(4vw, auto)
        [wide-start]
        minmax(auto, 140px)
        [main-start]
        min(640px, calc(100% - 8vw))
        [main-end]
        minmax(auto, 140px)
        [wide-end]
        minmax(4vw, auto)
        [full-end];
}

.kg-canvas > * {
    grid-column: main-start/main-end;
}

.kg-width-wide {
    grid-column: wide-start/wide-end;
}

.kg-width-full {
    grid-column: full-start/full-end;
}

